--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.17",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
